--- a/flights_notebook.ipynb
+++ b/flights_notebook.ipynb
@@ -23,6 +23,225 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Quarter</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>DayofMonth</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>FlightDate</th>\n",
+       "      <th>Reporting_Airline</th>\n",
+       "      <th>Tail_Number</th>\n",
+       "      <th>Flight_Number_Reporting_Airline</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CancellationCode</th>\n",
+       "      <th>Diverted</th>\n",
+       "      <th>AirTime</th>\n",
+       "      <th>Flights</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>CarrierDelay</th>\n",
+       "      <th>WeatherDelay</th>\n",
+       "      <th>NASDelay</th>\n",
+       "      <th>SecurityDelay</th>\n",
+       "      <th>LateAircraftDelay</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>OO</td>\n",
+       "      <td>N945SW</td>\n",
+       "      <td>5657</td>\n",
+       "      <td>SBP</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>OO</td>\n",
+       "      <td>N932SW</td>\n",
+       "      <td>5658</td>\n",
+       "      <td>IAH</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>438.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>OO</td>\n",
+       "      <td>N932SW</td>\n",
+       "      <td>5658</td>\n",
+       "      <td>SGF</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>513.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>OO</td>\n",
+       "      <td>N916SW</td>\n",
+       "      <td>5659</td>\n",
+       "      <td>ISN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>576.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>OO</td>\n",
+       "      <td>N107SY</td>\n",
+       "      <td>5660</td>\n",
+       "      <td>MKE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>896.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Quarter  Month  DayofMonth  DayOfWeek  FlightDate Reporting_Airline  \\\n",
+       "0  2019        1      1           4          5  2019-01-04                OO   \n",
+       "1  2019        1      1           4          5  2019-01-04                OO   \n",
+       "2  2019        1      1           4          5  2019-01-04                OO   \n",
+       "3  2019        1      1           4          5  2019-01-04                OO   \n",
+       "4  2019        1      1           4          5  2019-01-04                OO   \n",
+       "\n",
+       "  Tail_Number  Flight_Number_Reporting_Airline Origin  ... CancellationCode  \\\n",
+       "0      N945SW                             5657    SBP  ...              NaN   \n",
+       "1      N932SW                             5658    IAH  ...              NaN   \n",
+       "2      N932SW                             5658    SGF  ...              NaN   \n",
+       "3      N916SW                             5659    ISN  ...              NaN   \n",
+       "4      N107SY                             5660    MKE  ...              NaN   \n",
+       "\n",
+       "  Diverted AirTime Flights Distance  CarrierDelay  WeatherDelay  NASDelay  \\\n",
+       "0      0.0    37.0     1.0    190.0           NaN           NaN       NaN   \n",
+       "1      0.0    76.0     1.0    438.0           NaN           NaN       NaN   \n",
+       "2      0.0    88.0     1.0    513.0           NaN           NaN       NaN   \n",
+       "3      0.0    80.0     1.0    576.0           NaN           NaN       NaN   \n",
+       "4      0.0   127.0     1.0    896.0           NaN           NaN       NaN   \n",
+       "\n",
+       "   SecurityDelay  LateAircraftDelay  \n",
+       "0            NaN                NaN  \n",
+       "1            NaN                NaN  \n",
+       "2            NaN                NaN  \n",
+       "3            NaN                NaN  \n",
+       "4            NaN                NaN  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_path = '/blue/bsc4452/share/Class_Files/data/flights.1K.csv'\n",
+    "\n",
+    "df = pd.read_csv(data_path)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
