--- a/flights_notebook.ipynb
+++ b/flights_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,53 +191,295 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999994</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-02-01</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>N8606C</td>\n",
+       "      <td>2089</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1565.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999995</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-02-01</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>N8723Q</td>\n",
+       "      <td>1177</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>738.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999996</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-02-01</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>N8649A</td>\n",
+       "      <td>1387</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>738.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999997</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-02-01</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>N786SW</td>\n",
+       "      <td>2285</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>738.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>115.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999998</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-02-01</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>N726SW</td>\n",
+       "      <td>901</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>842.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 34 columns</p>\n",
+       "<p>999999 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year  Quarter  Month  DayofMonth  DayOfWeek  FlightDate Reporting_Airline  \\\n",
-       "0  2019        1      1           4          5  2019-01-04                OO   \n",
-       "1  2019        1      1           4          5  2019-01-04                OO   \n",
-       "2  2019        1      1           4          5  2019-01-04                OO   \n",
-       "3  2019        1      1           4          5  2019-01-04                OO   \n",
-       "4  2019        1      1           4          5  2019-01-04                OO   \n",
+       "        Year  Quarter  Month  DayofMonth  DayOfWeek  FlightDate  \\\n",
+       "0       2019        1      1           4          5  2019-01-04   \n",
+       "1       2019        1      1           4          5  2019-01-04   \n",
+       "2       2019        1      1           4          5  2019-01-04   \n",
+       "3       2019        1      1           4          5  2019-01-04   \n",
+       "4       2019        1      1           4          5  2019-01-04   \n",
+       "...      ...      ...    ...         ...        ...         ...   \n",
+       "999994  2019        1      2           1          5  2019-02-01   \n",
+       "999995  2019        1      2           1          5  2019-02-01   \n",
+       "999996  2019        1      2           1          5  2019-02-01   \n",
+       "999997  2019        1      2           1          5  2019-02-01   \n",
+       "999998  2019        1      2           1          5  2019-02-01   \n",
        "\n",
-       "  Tail_Number  Flight_Number_Reporting_Airline Origin  ... CancellationCode  \\\n",
-       "0      N945SW                             5657    SBP  ...              NaN   \n",
-       "1      N932SW                             5658    IAH  ...              NaN   \n",
-       "2      N932SW                             5658    SGF  ...              NaN   \n",
-       "3      N916SW                             5659    ISN  ...              NaN   \n",
-       "4      N107SY                             5660    MKE  ...              NaN   \n",
+       "       Reporting_Airline Tail_Number  Flight_Number_Reporting_Airline Origin  \\\n",
+       "0                     OO      N945SW                             5657    SBP   \n",
+       "1                     OO      N932SW                             5658    IAH   \n",
+       "2                     OO      N932SW                             5658    SGF   \n",
+       "3                     OO      N916SW                             5659    ISN   \n",
+       "4                     OO      N107SY                             5660    MKE   \n",
+       "...                  ...         ...                              ...    ...   \n",
+       "999994                WN      N8606C                             2089    BWI   \n",
+       "999995                WN      N8723Q                             1177    BWI   \n",
+       "999996                WN      N8649A                             1387    BWI   \n",
+       "999997                WN      N786SW                             2285    BWI   \n",
+       "999998                WN      N726SW                              901    BWI   \n",
        "\n",
-       "  Diverted AirTime Flights Distance  CarrierDelay  WeatherDelay  NASDelay  \\\n",
-       "0      0.0    37.0     1.0    190.0           NaN           NaN       NaN   \n",
-       "1      0.0    76.0     1.0    438.0           NaN           NaN       NaN   \n",
-       "2      0.0    88.0     1.0    513.0           NaN           NaN       NaN   \n",
-       "3      0.0    80.0     1.0    576.0           NaN           NaN       NaN   \n",
-       "4      0.0   127.0     1.0    896.0           NaN           NaN       NaN   \n",
+       "        ... CancellationCode Diverted AirTime Flights Distance  CarrierDelay  \\\n",
+       "0       ...              NaN      0.0    37.0     1.0    190.0           NaN   \n",
+       "1       ...              NaN      0.0    76.0     1.0    438.0           NaN   \n",
+       "2       ...              NaN      0.0    88.0     1.0    513.0           NaN   \n",
+       "3       ...              NaN      0.0    80.0     1.0    576.0           NaN   \n",
+       "4       ...              NaN      0.0   127.0     1.0    896.0           NaN   \n",
+       "...     ...              ...      ...     ...     ...      ...           ...   \n",
+       "999994  ...              NaN      0.0   215.0     1.0   1565.0           0.0   \n",
+       "999995  ...              NaN      0.0   112.0     1.0    738.0           0.0   \n",
+       "999996  ...              NaN      0.0   118.0     1.0    738.0           0.0   \n",
+       "999997  ...              NaN      0.0   112.0     1.0    738.0          16.0   \n",
+       "999998  ...              NaN      0.0   124.0     1.0    842.0           0.0   \n",
        "\n",
-       "   SecurityDelay  LateAircraftDelay  \n",
-       "0            NaN                NaN  \n",
-       "1            NaN                NaN  \n",
-       "2            NaN                NaN  \n",
-       "3            NaN                NaN  \n",
-       "4            NaN                NaN  \n",
+       "        WeatherDelay  NASDelay  SecurityDelay  LateAircraftDelay  \n",
+       "0                NaN       NaN            NaN                NaN  \n",
+       "1                NaN       NaN            NaN                NaN  \n",
+       "2                NaN       NaN            NaN                NaN  \n",
+       "3                NaN       NaN            NaN                NaN  \n",
+       "4                NaN       NaN            NaN                NaN  \n",
+       "...              ...       ...            ...                ...  \n",
+       "999994           0.0      50.0            0.0                0.0  \n",
+       "999995          61.0      34.0            0.0               40.0  \n",
+       "999996          48.0      64.0            0.0                0.0  \n",
+       "999997           0.0       3.0            0.0              115.0  \n",
+       "999998          76.0      43.0            0.0                0.0  \n",
        "\n",
-       "[5 rows x 34 columns]"
+       "[999999 rows x 34 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_path = '/blue/bsc4452/share/Class_Files/data/flights.1K.csv'\n",
+    "data_path = '/blue/bsc4452/share/Class_Files/data/flights.1M.csv'\n",
     "\n",
     "df = pd.read_csv(data_path)\n",
-    "df.head()"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Year', 'Quarter', 'Month', 'DayofMonth', 'DayOfWeek', 'FlightDate',\n",
+      "       'Reporting_Airline', 'Tail_Number', 'Flight_Number_Reporting_Airline',\n",
+      "       'Origin', 'OriginCityName', 'OriginState', 'Dest', 'DestCityName',\n",
+      "       'DestState', 'DepTime', 'DepDelay', 'DepDelayMinutes', 'DepDel15',\n",
+      "       'ArrTime', 'ArrDelay', 'ArrDelayMinutes', 'ArrDel15', 'Cancelled',\n",
+      "       'CancellationCode', 'Diverted', 'AirTime', 'Flights', 'Distance',\n",
+      "       'CarrierDelay', 'WeatherDelay', 'NASDelay', 'SecurityDelay',\n",
+      "       'LateAircraftDelay'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get a list off the columns in the df\n",
+    "columns = df.columns\n",
+    "print(columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year  Month\n",
+      "2019  1        583985\n",
+      "      2        416014\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the Year and Month columns, calculate the number of flights each month\n",
+    "# Hint: Use the groupby() function\n",
+    "flights_per_month = df.groupby(['Year', 'Month']).size()\n",
+    "print(flights_per_month)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year  Month\n",
+      "2019  1        193194\n",
+      "      2        160626\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the Year, Month and ArrDelay columns, calculate the number of flights delayed per month\n",
+    "# Hint: Use the groupby() function  \n",
+    "# Hint: Use the sum() function\n",
+    "delayed_flights_per_month = df[df['ArrDelay'] > 0].groupby(['Year', 'Month']).size()\n",
+    "print(delayed_flights_per_month)"
    ]
   },
   {
