--- a/flights_notebook.ipynb
+++ b/flights_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[999999 rows x 34 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -480,6 +480,40 @@
     "# Hint: Use the sum() function\n",
     "delayed_flights_per_month = df[df['ArrDelay'] > 0].groupby(['Year', 'Month']).size()\n",
     "print(delayed_flights_per_month)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            CarrierDelay  WeatherDelay   NASDelay  SecurityDelay  \\\n",
+      "Year Month                                                         \n",
+      "2019 1         20.106080      4.428551  18.508392       0.079508   \n",
+      "     2         20.813905      5.430730  18.797915       0.067058   \n",
+      "\n",
+      "            LateAircraftDelay  \n",
+      "Year Month                     \n",
+      "2019 1              24.950590  \n",
+      "     2              26.889989  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# For flights that are delayed (using the ArrDelay colum)), \n",
+    "# calculate the average delay time by type of delay, using the \n",
+    "# 'CarrierDelay', 'WeatherDelay', 'NASDelay', 'SecurityDelay',\n",
+    "#       'LateAircraftDelay' columns\n",
+    "# Hint: Use the groupby() function\n",
+    "# Hint: Use the mean() function\n",
+    "average_delay_time = df[df['ArrDelay'] > 0].groupby(['Year', 'Month'])[['CarrierDelay', 'WeatherDelay',\n",
+    "                         'NASDelay', 'SecurityDelay', \n",
+    "                         'LateAircraftDelay']].mean()\n",
+    "print(average_delay_time)\n"
    ]
   },
   {
